# rust-raspberrypi-OS

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  commands.lldb  config.txt  demo_payload_rpi5.img  example_config.txt  gdb_init  kernel8_chainloader.img  kernel8_chainloader_rpi1_uart.img  rust-toolchain.toml
.cargo/: config.toml
05_drivers_gpio_uart/: README.md
X1_JTAG_boot/: Makefile  jtag_boot_rpi5.img  update.sh
X1_JTAG_boot/src/: bsp.rs  main.rs  panic_wait.rs  print.rs
X1_JTAG_boot/src/_arch/aarch64/cpu/: boot.s
X1_JTAG_boot/src/bsp/: device_driver.rs
X1_JTAG_boot/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  (+1 more)
X1_JTAG_boot/src/bsp/raspberrypi/: driver.rs  memory.rs
common/: docker.mk
common/serial/: minipush.rb  miniterm.rb
docker/rustembedded-osdev-utils/: Dockerfile  Makefile  rpi5.cfg
kernel/: Cargo.toml
kernel/src/: driver.rs  lib.rs  main.rs
kernel/src/_arch/aarch64/: cpu.rs  exception.rs
kernel/src/bsp/raspberrypi/: driver.rs  kernel.ld  memory.rs
kernel/src/memory/: mmu.rs
src/: bsp.rs  common.rs  console.rs  driver.rs  exception.rs  main.rs  memory.rs  panic_wait.rs  print.rs
src/_arch/aarch64/: cpu.rs  exception.s  time.rs
src/_arch/aarch64/cpu/: boot.s
src/_arch/aarch64/memory/: mmu.rs
src/bsp/: raspberrypi.rs
src/bsp/device_driver/: bcm.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_early_uart.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  driver.rs  kernel.ld  memory.rs
src/bsp/raspberrypi/memory/: mmu.rs
src/memory/: mmu.rs
src/memory/mmu/: translation_table.rs
(+5 files in other folders)
